syntax = "proto3";
package v1;

import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "buf/validate/validate.proto";

service Goals {
  rpc CreateGoal(CreateGoalRequest) returns (CreateGoalResponse) {
    option (google.api.http) = {
      post : "/v1/goals"
    };
  };
  rpc GetGoal(ListGoalsRequest) returns (Goal) {
    option (google.api.http) = {
      get : "/v1/goal"
    };
  };
  rpc ListGoals(ListGoalsRequest) returns (ListGoalsResponse) {
    option (google.api.http) = {
      get : "/v1/goals"
    };
  };
  rpc DeleteGoal(DeleteGoalRequest) returns (DeleteGoalResponse) {
    option (google.api.http) = {
      delete : "/v1/goal"
    };
  };
}

message Goal {
  Type type = 1;
  string value = 2;
  google.protobuf.Duration created_at = 3;

  enum Type {
    EVENT = 0;
    PATH = 1;
  }
}

message CreateGoalRequest {
  string domain = 1 [
    (buf.validate.field).string.hostname = true,
    (buf.validate.field).required = true
  ];
  Goal.Type type = 2 [ (buf.validate.field).required = true ];
  string value = 3 [ (buf.validate.field).required = true ];
}

message CreateGoalResponse { Goal goal = 1; }

message GetGoal { string id = 1; }

message ListGoalsRequest {}
message ListGoalsResponse { repeated Goal goals = 1; }

message DeleteGoalRequest { string id = 1; }

message DeleteGoalResponse {}